[package]
name = "stm32f446-oled-test"
version = "0.1.0"
authors = ["Filip Wieland <filiplamparski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
ssd1306 = "0.2.6"
# Can't use 0.5.x series because it's not compatible with ssd1306
embedded-graphics = "0.4.9"

[dependencies.stm32f4xx-hal]
version = "0.5.0"
features = ["stm32f446", "rt"]